[package]
name = "advent"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/johnoppenheimer/adventofcode2023"
repository = "https://github.com/johnoppenheimer/adventofcode2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
human-time = "0.1.6"
log = "0.4.20"
rayon = "1.8.0"
regex = "1.10.2"

[[bin]]
edition = "2021"
name = "advent"
path = "src/main.rs"

